--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Future Banking innovations</title>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="header">
